--- a/memegenerator/public/index.html
+++ b/memegenerator/public/index.html
@@ -16,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <title>React App</title>
+    <title>Meme Generator</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
